--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "illuminate/filesystem": "5.*"
   },
   "require-dev": {
+    "phpunit/phpunit": "^5.0",
     "mockery/mockery": "0.9.*"
   },
   "autoload": {
