--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
   ],
   "license": "MIT",
   "require": {
-    "php" : "^5.5|^7.0|^8.0",
-    "illuminate/support": "^5.2|^6.0|^7.0|^8.0",
-    "illuminate/console": "^5.2|^6.0|^7.0|^8.0",
-    "illuminate/database": "^5.2|^6.0|^7.0|^8.0",
-    "illuminate/filesystem": "^5.2|^6.0|^7.0|^8.0"
+    "php" : "^7.4|^8.0",
+    "illuminate/support": "^6.0|^7.0|^8.0",
+    "illuminate/console": "^6.0|^7.0|^8.0",
+    "illuminate/database": "^6.0|^7.0|^8.0",
+    "illuminate/filesystem": "^6.0|^7.0|^8.0"
   },
   "require-dev": {
-    "mockery/mockery": "0.9.*"
+    "mockery/mockery": "^1.4.1"
   },
   "autoload": {
     "psr-0": {
